--- a/Symfony/my_project/config/packages/doctrine.yaml
+++ b/Symfony/my_project/config/packages/doctrine.yaml
@@ -1,5 +1,20 @@
+parameters:
+    # Adds a fallback DATABASE_URL if the env var is not set.
+    # This allows you to run cache:warmup even if your
+    # environment variables are not available yet.
+    # You should not need to change this value.
+    env(DATABASE_URL): ''
+
 doctrine:
     dbal:
+        driver: 'pdo_mysql'
+        server_version: '5.7'
+        charset: utf8mb4
+        unix_socket: /Applications/MAMP/tmp/mysql/mysql.sock
+        default_table_options:
+            charset: utf8mb4
+            collate: utf8mb4_unicode_ci
+
         url: '%env(resolve:DATABASE_URL)%'
 
         # IMPORTANT: You MUST configure your server version,
