symfony and twig

--- a/Symfony/my_project/config/services.yaml
+++ b/Symfony/my_project/config/services.yaml
@@ -5,6 +5,8 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
 
+    download_directory: '../public/'
+
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -23,9 +25,18 @@ services:
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
-    App\Controller\:
-        resource: '../src/Controller/'
-        tags: ['controller.service_arguments']
+    # you can bind services to a specific controller 
+
+    App\Controller\DefaultController:
+
+        bind:
+
+            $logger: '@monolog.logger.doctrine'
+
+
+    # App\Controller\:
+    #     resource: '../src/Controller/'
+    #     tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
